# rmdev_ins

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ins.cppm  ins_base.cppm
inc/rmdev/: ins.hpp
inc/rmdev/ins/: ins_base.hpp
inc/rmdev/ins/detail/quaternion_ekf_ins/: QuaternionEKF_INS.hpp  kalman_filter.hpp  rmdev_matrix_adapter.hpp
quaternion_ekf_ins/: QuaternionEKF_INS.cppm  kalman_filter.c  kalman_filter.h
src/quaternion_ekf_ins/: kalman_filter.cpp
